--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "effector-react": "^23.2.1",
     "eslint-config-airbnb": "^19.0.4",
     "hls.js": "^1.5.13",
+    "patronum": "^2.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "effector-swc-plugin": "^0.3.0",
     "eslint": "^8.0.1",
