--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "husky": "^9.1.1",
     "i": "^0.3.7",
     "lint-staged": "^13.1.2",
     "npm": "^10.8.1",
