--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/hls.js": "^1.0.0",
+    "classnames": "^2.5.1",
     "effector": "^23.2.2",
     "effector-react": "^23.2.1",
     "eslint-config-airbnb": "^19.0.4",
@@ -43,11 +44,16 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "husky": "^9.1.1",
     "i": "^0.3.7",
-    "lint-staged": "^13.1.2",
+    "lint-staged": "^15.2.7",
     "npm": "^10.8.1",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.3",
     "sass": "^1.75.0",
     "typescript": "*",
     "vite": "^5.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
