--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.14.0",
     "@types/hls.js": "^1.0.0",
     "classnames": "^2.5.1",
     "effector": "^23.2.2",
