--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
     "prepare": "husky install"
   },
@@ -52,7 +52,8 @@
     "npm": "^10.8.1",
     "prettier": "^3.3.3",
     "sass": "^1.75.0",
-    "typescript": "*",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.4.0",
     "vite": "^5.2.0"
   },
   "husky": {
